3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Fix for bug #2081472: short int encoding for food value in payment altars.
(merged from trunk)
 include/living.h object.h: make food and last_eat sint32 so no overflow.
 Nicolas Weeger 2008-10-31

Add new setup option "num_look_objects": allows clients to set the size
of the ground view. Clients not sending this option default to 50 which
is the previously hard-coded size. Fixes some off-by-one issues; now
always exactly the requested number of objects are sent.
 trunk/include/newserver.h
 trunk/socket/item.c
 trunk/socket/init.c
 trunk/socket/request.c
 trunk/doc/Developers/protocol
Andreas Kirschbaum 2008-09-06

Backport from trunk: Inform other party members when a player leaves a
party by joining or creating another party, not only when the player uses
"party leave".
 server/c_party.c
Raphaël Quinet 2008-08-26

Avoid problems if the floor was already removed together with a wall.
 server/build_map.c
Raphaël Quinet 2008-08-04

Merged bug fix from trunk: when building a new floor on top of an old floor,
the old one was never removed, resulting in a stack of floors in some buildable
areas.
 server/build_map.c
Raphaël Quinet 2008-08-03

Backported from trunk: fix for bug #2028541: Any object using a non-default
move_slow_penalty was always saved with the value 0 because the code was
using FAST_SAVE_LONG instead of FAST_SAVE_DOUBLE for a floating-point value.
 common/loader.l
Raphaël Quinet 2008-08-02

Fix for bug introduced when backporting.
 server/build_map.c
Raphael Quinet 2008-07-25

Backported fix for bug #2017790 "Cannot build talking books, listening books or